@@ -6,48 +6,46 @@ import stroom.query.api.v2.ConditionalFormattingRule;
 import stroom.query.api.v2.ExpressionOperator;
 import stroom.query.api.v2.Row;
 import stroom.query.common.v2.format.ColumnFormatter;
-import stroom.query.language.functions.Val;
 import stroom.query.language.functions.ref.ErrorConsumer;
 import stroom.util.logging.LambdaLogger;
 import stroom.util.logging.LambdaLoggerFactory;
 
+import com.google.common.base.Predicates;
+
 import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.function.Predicate;
 
-public class ConditionalFormattingRowCreator implements ItemMapper<Row> {
+public class ConditionalFormattingRowCreator extends FilteredRowCreator {
 
     private static final LambdaLogger LOGGER = LambdaLoggerFactory.getLogger(ConditionalFormattingRowCreator.class);
 
-    private final ColumnFormatter fieldFormatter;
-    private final KeyFactory keyFactory;
-    private final ExpressionOperator rowFilter;
-    private final List<ConditionalFormattingRule> rules;
-    private final ColumnExpressionMatcher expressionMatcher;
+    private final Predicate<Map<String, Object>> rowFilter;
+    private final List<RuleAndMatcher> rules;
     private final ErrorConsumer errorConsumer;
 
-    private ConditionalFormattingRowCreator(final ColumnFormatter fieldFormatter,
+    private ConditionalFormattingRowCreator(final List<Column> originalColumns,
+                                            final List<Column> newColumns,
+                                            final ColumnFormatter columnFormatter,
                                             final KeyFactory keyFactory,
-                                            final ExpressionOperator rowFilter,
-                                            final List<ConditionalFormattingRule> rules,
-                                            final ColumnExpressionMatcher expressionMatcher,
+                                            final Predicate<Map<String, Object>> rowFilter,
+                                            final List<RuleAndMatcher> rules,
                                             final ErrorConsumer errorConsumer) {
-        this.fieldFormatter = fieldFormatter;
-        this.keyFactory = keyFactory;
+        super(originalColumns, newColumns, columnFormatter, keyFactory, rowFilter, errorConsumer);
+
         this.rowFilter = rowFilter;
         this.rules = rules;
-        this.expressionMatcher = expressionMatcher;
         this.errorConsumer = errorConsumer;
     }
 
-    public static Optional<ItemMapper<Row>> create(final ColumnFormatter fieldFormatter,
+    public static Optional<ItemMapper<Row>> create(final List<Column> originalColumns,
+                                                   final List<Column> newColumns,
+                                                   final ColumnFormatter columnFormatter,
                                                    final KeyFactory keyFactory,
-                                                   final ExpressionOperator rowFilter,
+                                                   final ExpressionOperator rowFilterExpression,
                                                    final List<ConditionalFormattingRule> rules,
-                                                   final List<Column> columns,
                                                    final DateTimeSettings dateTimeSettings,
                                                    final ErrorConsumer errorConsumer) {
         // Create conditional formatting expression matcher.
@@ -55,17 +53,32 @@ public class ConditionalFormattingRowCreator implements ItemMapper<Row> {
             final List<ConditionalFormattingRule> activeRules = rules
                     .stream()
                     .filter(ConditionalFormattingRule::isEnabled)
-                    .collect(Collectors.toList());
-            if (activeRules.size() > 0) {
-                final ColumnExpressionMatcher expressionMatcher =
-                        new ColumnExpressionMatcher(columns, dateTimeSettings);
-                return Optional.of(new ConditionalFormattingRowCreator(
-                        fieldFormatter,
-                        keyFactory,
-                        rowFilter,
-                        activeRules,
-                        expressionMatcher,
-                        errorConsumer));
+                    .toList();
+            if (!activeRules.isEmpty()) {
+                final Optional<RowExpressionMatcher> optionalRowExpressionMatcher =
+                        RowExpressionMatcher.create(newColumns, dateTimeSettings, rowFilterExpression);
+                final Predicate<Map<String, Object>> rowFilter = optionalRowExpressionMatcher
+                        .map(orem -> (Predicate<Map<String, Object>>) orem)
+                        .orElse(Predicates.alwaysTrue());
+
+                final List<RuleAndMatcher> ruleAndMatchers = new ArrayList<>();
+                for (final ConditionalFormattingRule rule : rules) {
+                    final Optional<RowExpressionMatcher> optionalRuleFilter =
+                            RowExpressionMatcher.create(newColumns, dateTimeSettings, rule.getExpression());
+                    optionalRuleFilter.ifPresent(columnExpressionMatcher ->
+                            ruleAndMatchers.add(new RuleAndMatcher(rule, columnExpressionMatcher)));
+                }
+
+                if (optionalRowExpressionMatcher.isPresent() || !ruleAndMatchers.isEmpty()) {
+                    return Optional.of(new ConditionalFormattingRowCreator(
+                            originalColumns,
+                            newColumns,
+                            columnFormatter,
+                            keyFactory,
+                            rowFilter,
+                            ruleAndMatchers,
+                            errorConsumer));
+                }
             }
         }
 
@@ -73,45 +86,31 @@ public class ConditionalFormattingRowCreator implements ItemMapper<Row> {
     }
 
     @Override
-    public Row create(final List<Column> columns,
-                      final Item item) {
+    public Row create(final Item item,
+                      final List<String> stringValues,
+                      final Map<String, Object> fieldIdToValueMap) {
         Row row = null;
-
-        final Map<String, Object> fieldIdToValueMap = new HashMap<>();
-        final List<String> stringValues = new ArrayList<>(columns.size());
-        int i = 0;
-        for (final Column column : columns) {
-            final Val val = item.getValue(i);
-            final String string = fieldFormatter.format(column, val);
-            stringValues.add(string);
-            fieldIdToValueMap.put(column.getId(), string);
-            fieldIdToValueMap.put(column.getName(), string);
-            i++;
-        }
 
         // Find a matching rule.
         ConditionalFormattingRule matchingRule = null;
 
         try {
             // See if we can exit early by applying row filter.
-            if (rowFilter != null) {
-                if (!expressionMatcher.match(fieldIdToValueMap, rowFilter)) {
-                    return null;
-                }
+            if (!rowFilter.test(fieldIdToValueMap)) {
+                return null;
             }
 
-            for (final ConditionalFormattingRule rule : rules) {
+            for (final RuleAndMatcher ruleAndMatcher : rules) {
                 try {
-                    final ExpressionOperator operator = rule.getExpression();
-                    final boolean match = expressionMatcher.match(fieldIdToValueMap, operator);
+                    final boolean match = ruleAndMatcher.matcher.test(fieldIdToValueMap);
                     if (match) {
-                        matchingRule = rule;
+                        matchingRule = ruleAndMatcher.rule;
                         break;
                     }
                 } catch (final RuntimeException e) {
                     final RuntimeException exception = new RuntimeException(
                             "Error applying conditional formatting rule: " +
-                                    rule.toString() +
+                                    ruleAndMatcher.rule.toString() +
                                     " - " +
                                     e.getMessage());
                     LOGGER.debug(exception.getMessage(), exception);
@@ -152,8 +151,7 @@ public class ConditionalFormattingRowCreator implements ItemMapper<Row> {
         return row;
     }
 
-    @Override
-    public boolean hidesRows() {
-        return true;
+    private record RuleAndMatcher(ConditionalFormattingRule rule, RowExpressionMatcher matcher) {
+
     }
 }
