@@ -27,10 +27,12 @@ import stroom.query.api.v2.TableResultBuilder;
 import stroom.query.api.v2.TableSettings;
 import stroom.query.common.v2.format.ColumnFormatter;
 import stroom.query.language.functions.ref.ErrorConsumer;
+import stroom.util.NullSafe;
 import stroom.util.concurrent.UncheckedInterruptedException;
 import stroom.util.logging.LambdaLogger;
 import stroom.util.logging.LambdaLoggerFactory;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
@@ -76,40 +78,48 @@ public class TableResultCreator implements ResultCreator {
             // What is the interaction between the paging and the maxResults? The assumption is that
             // maxResults defines the max number of records to come back and the paging can happen up to
             // that maxResults threshold
-            final List<Column> columns = dataStore.getColumns();
-            TableSettings tableSettings = resultRequest.getMappings().get(0);
-
+            final TableSettings tableSettings = resultRequest.getMappings().getFirst();
+            final List<Column> columns = new ArrayList<>(NullSafe.list(
+                    NullSafe.get(tableSettings, TableSettings::getColumns)));
             resultBuilder.columns(columns);
 
             // Create the row creator.
             Optional<ItemMapper<Row>> optionalRowCreator = Optional.empty();
             if (tableSettings != null) {
                 optionalRowCreator = ConditionalFormattingRowCreator.create(
+                        dataStore.getColumns(),
+                        columns,
                         columnFormatter,
                         keyFactory,
                         tableSettings.getAggregateFilter(),
                         tableSettings.getConditionalFormattingRules(),
-                        columns,
                         dataStore.getDateTimeSettings(),
                         errorConsumer);
                 if (optionalRowCreator.isEmpty()) {
                     optionalRowCreator = FilteredRowCreator.create(
+                            dataStore.getColumns(),
+                            columns,
                             columnFormatter,
                             keyFactory,
                             tableSettings.getAggregateFilter(),
-                            columns,
                             dataStore.getDateTimeSettings(),
                             errorConsumer);
                 }
             }
 
             if (optionalRowCreator.isEmpty()) {
-                optionalRowCreator = SimpleRowCreator.create(columnFormatter, keyFactory, errorConsumer);
+                optionalRowCreator = SimpleRowCreator.create(
+                        dataStore.getColumns(),
+                        columns,
+                        columnFormatter,
+                        keyFactory,
+                        errorConsumer);
             }
 
             final ItemMapper<Row> rowCreator = optionalRowCreator.orElse(null);
             final Set<Key> openGroups = keyFactory.decodeSet(resultRequest.getOpenGroups());
             dataStore.fetch(
+                    columns,
                     range,
                     new OpenGroupsImpl(openGroups),
                     resultRequest.getTimeFilter(),
@@ -133,6 +143,7 @@ public class TableResultCreator implements ResultCreator {
         }
 
         resultBuilder.componentId(resultRequest.getComponentId());
+        resultBuilder.errors(errorConsumer.getErrors());
         resultBuilder.resultRange(new OffsetRange(offset, pageLength.get()));
         TableResult result = resultBuilder.build();
 
